# zne-tool

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  uninstall.py  zne.py  zne_packed.py
core/: api_client.py  api_runner.py  codec.py  packer.py  qrgen.py  search.py  serializer.py  system.py  theme.py
styles/: api.css  codec.css  home.css  main.css  obfuscate.css  qr.css  search.css  system.css  theme.css
ui/: app.py  commands.py
ui/components/: error_modal.py  home.py
ui/screens/: api_screen.py  codec_screen.py  obfuscate_screen.py  qr_screen.py  search_screen.py  system_screen.py  theme_screen.py
